--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_PASSWORD=
 #DB_USERNAME=admin_test_praktikum
 #DB_PASSWORD=Umidbek19952812
 # /etc/nginx/conf.d/domains
+
+BOT_TOKEN=7171077946:AAGuU-aRds188zgGfmTsnN92r-dihVPbrio
