--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cluster": "^0.7.7",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
+    "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
@@ -22,6 +26,7 @@
     "objection": "^3.1.3",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "telegraf": "^4.16.3"
   }
 }
