--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.2.0",
+    "fontkit": "^2.0.4",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
     "objection": "^3.1.3",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
