--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
+    "node-telegram-bot-api": "^0.66.0",
     "objection": "^3.1.3",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
