--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "objection": "^3.1.3",
     "pdf-lib": "^1.17.1",
@@ -31,6 +32,7 @@
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "winston": "^3.17.0"
   }
 }
