--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cluster": "^0.7.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.2.0",
     "fontkit": "^2.0.4",
@@ -23,14 +23,15 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.7.1",
-    "node-telegram-bot-api": "^0.66.0",
+    "mysql2": "^2.3.3",
+    "node-telegram-bot-api": "^0.61.0",
     "objection": "^3.1.3",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "winston": "^3.8.2"
   }
 }
