--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "node-cache": "^5.1.2",
     "node-telegram-bot-api": "^0.61.0",
     "objection": "^3.1.3",
     "pdf-lib": "^1.17.1",
